Bug 368749 - Wrong displayed grade/pregrade in some practise modes
Summary: Wrong displayed grade/pregrade in some practise modes
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-13 13:56 UTC by Hartmut Riesenbeck
Modified: 2016-10-30 19:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen shot of practice mode (29.15 KB, image/png)
2016-09-13 13:58 UTC, Hartmut Riesenbeck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hartmut Riesenbeck 2016-09-13 13:56:27 UTC
The grade/pregrade display at the upper right corner of the practice dialog fails for conjugation, gender of nouns and comparsion sessions. The grades of the base entry were shown instead of the congugation resp. article or comparsion ones.


Reproducible: Always

Steps to Reproduce:
1. Open a vocabulary document which has gender, comparsion or conjugation data entered.
2. Select Written practice mode.
3. Enter some right answers for e.g. some nouns to store them with a grad/pregrade other than zero.
4. Select Gender of Nouns practice mode.
5. Select wrong answers for the former practiced nouns.
6. Continue as long as one of these nouns is prompted again.

Actual Results:  
The grade of the base vocabulary entry which we have seen in the Written practice mode before is displayed in the second line of the upper right corner of the screen

Expected Results:  
"New Word" should be displayed in the second line of the upper right corner of the screen. Because grade/pregrade was reset to zero before with the wrong aswer.
Comment 1 Hartmut Riesenbeck 2016-09-13 13:58:41 UTC
Created attachment 101068 [details]
Screen shot of practice mode
Comment 2 Hartmut Riesenbeck 2016-10-30 19:28:00 UTC
Git commit b2ddc4a2bf4147ad5c435d4199e1cfc8f4176aba by Hartmut Riesenbeck.
Committed on 30/10/2016 at 19:24.
Pushed by hriesenbeck into branch 'master'.

Fix wrong displayed grade/pregrade in practise mode

The grade/pregrade display at the upper right corner of the practice
dialog fails for conjugation, gender of nouns and comparsion sessions.
The grades of the base entry were shown instead of the congugation
resp. article or comparsion ones.
REVIEW: 128901

M  +18   -0    src/practice/comparisonbackendmode.cpp
M  +2    -0    src/practice/comparisonbackendmode.h
M  +6    -16   src/practice/conjugationbackendmode.cpp
M  +19   -0    src/practice/genderbackendmode.cpp
M  +3    -0    src/practice/genderbackendmode.h
M  +2    -3    src/practice/practicestatemachine.cpp

http://commits.kde.org/parley/b2ddc4a2bf4147ad5c435d4199e1cfc8f4176aba