Fix wrong displayed grade/pregrade in practise mode

The grade/pregrade display at the upper right corner of the practice
dialog fails for conjugation, gender of nouns and comparsion sessions.
The grades of the base entry were shown instead of the congugation
resp. article or comparsion ones.

BUG: 368749
REVIEW: 128901